--- a/fotos-eventos/src/app/app.component.html
+++ b/fotos-eventos/src/app/app.component.html
@@ -7,10 +7,18 @@
 
       </div>
     </header>
+    <main>
 
-    <section class="container">
-      <app-botao [btnConfigs]="primeiro"></app-botao>
-      <app-botao [btnConfigs]="segundo"></app-botao>
-      <app-botao [btnConfigs]="terceiro"></app-botao>
-      <app-botao [btnConfigs]="quarto"></app-botao>
-    </section>
+      <section class="container">
+        <app-botao [btnConfigs]="primeiro"></app-botao>
+        <app-botao [btnConfigs]="segundo"></app-botao>
+        <app-botao [btnConfigs]="terceiro"></app-botao>
+        <app-botao [btnConfigs]="quarto"></app-botao>
+      </section>
+    </main>
+
+    <footer>
+
+      <app-rodape></app-rodape>
+
+    </footer>
