--- a/fotos-eventos/src/app/app.component.css
+++ b/fotos-eventos/src/app/app.component.css
@@ -3,9 +3,9 @@ header {
 }
 
 .container {
-  padding: 2rem 0;
+  padding: 1rem 0;
   width: 82%;
-  margin: 0 auto;
+  margin: 5%;
 
   color: #fff;
   font-family: sans-serif;
