--- a/fotos-eventos/src/app/componente/compinicial/compinicial.component.html
+++ b/fotos-eventos/src/app/componente/compinicial/compinicial.component.html
@@ -1,2 +1,22 @@
 <h2>GERENCIADOR DE FOTOS E EVENTOS</h2>
 
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Data</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of allEvents">
+        <th scope="row">{{ item.id }}</th>
+        <td>{{ item.nome }}</td>
+        <td>{{ item.data}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
