--- a/fotos-eventos/src/app/app.component.html
+++ b/fotos-eventos/src/app/app.component.html
@@ -10,9 +10,7 @@
     <main>
 
       <section class="container">
-        <app-botao [btnConfigs]="primeiro">
-          <a class="btn primeiro" routerLink="/ftevents/add">Create</a>
-        </app-botao>
+        <app-botao [btnConfigs]="primeiro"></app-botao>
         <app-botao [btnConfigs]="segundo"></app-botao>
         <app-botao [btnConfigs]="terceiro"></app-botao>
         <app-botao [btnConfigs]="quarto"></app-botao>
